fix staleness semantics. We cannot guarantee per-sample staleness

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -145,8 +145,11 @@ trainer:
 
     # The number of generation workers to spawn, where each worker works on a group of trajcetories,
     # being the same prompt repeated `generator.n_samples_per_prompt` times.
-    # Default value is policy_mini_batch_size * (max_staleness_steps + 1) -- 256 * (4 + 1) = 1280
-    num_parallel_generation_workers: 1280
+    # It should be >= policy_mini_batch_size to avoid wasted throughput, and <= policy_mini_batch_size * (max_staleness_steps + 1)
+    # since it would be wasted due to capacity control.
+    # The larger the number, the more throughput, and likely more staleness (and hence off-policy-ness).
+    # Default value is: policy_mini_batch_size * (max_staleness_steps / 2 + 1) = 256 * (4 / 2 + 1) = 768
+    num_parallel_generation_workers: 768
 
   gradient_checkpointing: true
   gradient_checkpointing_use_reentrant: false
