[skyrl-train][lora] enforce_eager=true slows down generation time dramatically with LoRA (#665)
Unfortunately, this seems to be a vLLM issue that has been widely
reported and not addressed. I've provided some additional vllm
configuration flags (fully sharded lora) and double checked that
max_lora_rank is equal to the input lora rank which was also recorded as
a potential cause.

For now, I've implemented a bandaid solution where we always set
enforce_eager=false for LoRA runs to prevent slowdowns in all training
runs with a warning. This is in line with the vLLM suggested fixes for
the generator.

See https://github.com/vllm-project/vllm/issues/13204 and
https://github.com/vllm-project/vllm/issues/9452

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -202,6 +202,7 @@ generator:
   max_num_batched_tokens: 8192
   # Disable CUDA graphs by default for stability. Set to false for higher performance, but this may affect convergence for long-running and/or long context training jobs.
   enforce_eager: true
+  fully_sharded_loras: false
   gpu_memory_utilization: 0.8
   max_num_seqs: 1024
   remote_inference_engine_urls: ["127.0.0.1:8001"]
@@ -221,7 +222,7 @@ generator:
   # Inference engine arguments. Arguments are passed directly to the vLLM or SGLang engine, so names must match
   # the engine's args. To specify an engine arg in the CLI override, use the format: +generator.engine_init_kwargs.arg_name=value
   engine_init_kwargs: {}
-
+  
   override_existing_update_group: "auto" # "auto", "enable", "disable"
   # sampling params for generation phase
   sampling_params:
