--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -90,7 +90,7 @@ trainer:
     use_kl_in_reward: false # apply kl loss to rewards
     use_kl_loss: true # used in policy model
     kl_loss_coef: 0.001
-    # entropy loss (disable by default?)
+    # entropy loss
     use_entropy_loss: false
     entropy_loss_coef: 0.0
     # this adds training batch level normalization to advantages
