--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -170,13 +170,29 @@ trainer:
   dump_eval_results: true
 
   # YaRN:
-  rope_scaling: null
-  rope_theta: null
+  # rope_scaling: null
+  # rope_theta: null
   # rope_scaling:
   #   rope_type: yarn
   #   factor: 1.0
   #   original_max_position_embeddings: 32768
 
+  # RoPE (Rotary Position Embedding) configuration
+  # rope_theta: null  # (float) The base period of the RoPE embeddings
+  
+  # YaRN: See https://huggingface.co/docs/transformers/main/en/internal/rope_utils for more details
+  rope_params: 
+    rope_type: null # ['default', 'linear', 'dynamic', 'yarn', 'longrope', 'llama3']
+    rope_theta: null
+    factor: null
+    original_max_position_embeddings: null
+    attention_factor: null
+    beta_fast: null
+    beta_slow: null
+    short_factor: null
+    long_factor: null
+    low_freq_factor: null
+    high_freq_factor: null
 
 generator:
   model_name: ${trainer.policy.model.path}
@@ -272,8 +288,10 @@ generator:
   apply_overlong_filtering: false
 
   # rope parameters, can be optionally different from the trainer , useful in some cases like with thinking models.
-  rope_scaling: ${trainer.rope_scaling}
-  rope_theta: ${trainer.rope_theta}
+  # rope_scaling: ${trainer.rope_scaling}
+  # rope_theta: ${trainer.rope_theta}
+  rope_parameters: ${trainer.rope_params}
+
 
 environment:
   env_class: "gsm8k"
