[megatron] upgrade from mbridge -> Megatron-Bridge (breaking change) (#453)
Upgrading from [mbridge](https://github.com/ISEEKYAN/mbridge) to
[Megatron-bridge](https://github.com/NVIDIA-NeMo/Megatron-Bridge), the
(now) official nvidia supported library for converting from HF to
megatron format. The changes are pretty minimal from a user perspective,
but do require updating to a new megatron version to use
megatron-bridge, making this a breaking change (megatron >= 14.0 is
required).

TODOs:
- [x] [Fixed, waiting for this to be included in a release/tagged RC]
test HF model saving and checkpointing - currently tie_word_embeddings
has issues in megatron-bridge
(https://github.com/NVIDIA-NeMo/Megatron-Bridge/issues/919)
- [x] pp > 2 is broken in Megatron-Bridge for models with
tie_word_embeddings=True:
https://github.com/NVIDIA-NeMo/Megatron-Bridge/issues/954

Known test failures:`test_save_and_load_model.py` with `-m "megatron"`
will fail for now.

---------

Signed-off-by: SumanthRH <sumanthrh99@gmail.com>
Co-authored-by: SumanthRH <sumanthrh99@gmail.com>
Co-authored-by: Sumanth R Hegde <39546518+SumanthRH@users.noreply.github.com>

--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 dependencies = [
     "loguru",
     "tqdm",
+    "ninja",
     "tensorboard",
     "func_timeout",
     "transformers>=4.51.0",
@@ -67,9 +68,15 @@ conflicts = [
         { extra = "flashrl" },
     ]
 ]
+no-build-isolation-package = [
+    "transformer-engine-torch",
+    "transformer-engine",
+]
 
 [tool.uv.extra-build-dependencies]
 flash-attn = [{requirement = "torch", match-runtime = true}]
+transformer-engine = [{ requirement = "torch", match-runtime = true }, "build_tools"]
+transformer-engine-torch = [{ requirement = "torch", match-runtime = true }, "build_tools"]
 
 [tool.uv.extra-build-variables]
 flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE"}
@@ -136,13 +143,15 @@ mcore = [
   # export LD_LIBRARY_PATH="$CUDNN_PATH/lib:${LD_LIBRARY_PATH:-}"
   # uv pip install --no-build-isolation "transformer_engine[pytorch]==2.5.0" --verbose
   # "transformer-engine[pytorch]==2.5.0",
+  "transformer-engine[pytorch]==2.7.0",
   "flash-attn==2.7.4.post1",
   "vllm==0.10.1.1",
   "torch==2.7.1",
   "flashinfer-python",
   "torchvision",
   "mbridge==0.15.1",
-  "megatron-core==0.13.0",
+  "megatron-bridge==0.1.0rc4",
+  "megatron-core==0.14.0",
 ]
 flashrl = [
     # NOTE: Custom vLLM wheel must be installed separately.
