--- a/skyrl-agent/.env.template
+++ b/skyrl-agent/.env.template
@@ -3,7 +3,7 @@ SKYRL_LD_LIBRARY_PATH_EXPORT=1 # skyrl + efa
 FI_PROVIDER=efa
 NCCL_DEBUG=INFO # fine to always be on, negligible perf impact
 LD_PRELOAD="/usr/lib/x86_64-linux-gnu/libnccl.so:/usr/lib/x86_64-linux-gnu/libstdc++.so.6"
-WANDB_API_KEY='e357e4ac1b5cace6b76e7857c2d97f6a84405006'
+WANDB_API_KEY="<REPLACE>"
 
 # SWE training
 ALLHANDS_API_KEY="sycao-sandbox-remote"
