--- a/skyrl-agent/examples/run_openai/test_vllm_oh.yaml
+++ b/skyrl-agent/examples/run_openai/test_vllm_oh.yaml
@@ -1,6 +1,6 @@
-agent_cls: skyagent.agents.oh_codeact.OHCodeActAgent
+agent_cls: skyrl_agent.agents.oh_codeact.OHCodeActAgent
 
-task: skyagent.tasks.swebench.utils.SWEBenchTask
+task: skyrl_agent.tasks.swebench.utils.SWEBenchTask
 
 tools:
   enable_bash_tool: false
