--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -202,8 +202,8 @@ trainer:
 
   # Note: rope_scaling and rope_theta are deprecated, use rope_parameters instead. See https://huggingface.co/docs/transformers/main/en/internal/rope_utils for more details
   
-  # rope_scaling: null
-  # rope_theta: null
+  rope_scaling: null
+  rope_theta: null
   # rope_scaling:
   #   rope_type: yarn
   #   factor: 1.0
